# glusterfs

./: .gitignore
api/src/: glfs.c
cli/src/: cli.h
contrib/fuse-util/: fusermount.c
contrib/uuid/: gen_uuid.c
debian/: changelog  rules
debian/patches/: 5  series
doc/developer-guide/: afr-locks-evolution.md  datastructure-mem-pool.md
glusterfsd/src/: glusterfsd-mgmt.c  glusterfsd.c
libglusterfs/src/: atomic.h  byte-order.h  checksum.c  circ-buff.c  circ-buff.h  client_t.c  client_t.h  common-utils.c  compat.c  compat.h  ctx.c  dict.c  dict.h  fd.c  fd.h  globals.c  glusterfs.h  graph.c  hashfn.c  inode.c  inode.h  iobuf.c  list.h  lkowner.h  logging.c  logging.h  mem-pool.c  mem-pool.h  run.c  stack.h  store.c  store.h  timer.c  timer.h  timespec.c  xlator.c  xlator.h
libglusterfs/src/glusterfs/: upcall-utils.h
mydeb/: glusterfs-client_7.5-ubuntu1~bionic1_amd64.deb  glusterfs-common_7.5-ubuntu1~bionic1_amd64.deb  glusterfs-server_7.5-ubuntu1~bionic1_amd64.deb
mydoc/: glusterd.md
mydoc/io/mv_file_to_anothrevolume/: myunderstand.md
mydoc/io流/: cp.md
mydoc/sequence_diagram/sequence_diagram_src/: glusterfs_3.12.15.asta
mydoc/shell/: a.out  add_iostats.cpp  fix_trust_fuse.sh  fop_profile.sh  io-stats-profilevol-client-0
mydoc/shell/ls/: readdir-ahead.md  readdir-ahead开启.md  readdir_1M_parallelon.md  readdir_1M_rda-request-size .md
mydoc/环境搭建及测试/: cosbench.md  gluster_and_minio.md  minio.md  选服务器.md
mydoc/环境测试/: 参数调优.md  测试hdd.md
rpc/rpc-lib/src/: rpcsvc.h
xlators/mount/fuse/src/: Makefile.am  fuse-bridge.c  fuse-extra.c
(+52 files in other folders)
